Wildfly and JPA test added

--- a/pom.xml
+++ b/pom.xml
@@ -5,21 +5,20 @@
   <groupId>org.jboss.qa</groupId>
   <artifactId>datasources-test</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  
   <properties>
     <jdbc.xa.class.property></jdbc.xa.class.property>
     <version.maven.compiler>3.1</version.maven.compiler>
     <jdbc.username.property></jdbc.username.property>
     <jdbc.url.property></jdbc.url.property>
     <version.maven.surefire>2.14.1</version.maven.surefire>
+    <version.arquillian.core>1.1.1.Final</version.arquillian.core>
     <jboss.dist>${env.JBOSS_HOME}</jboss.dist>
     <jdbc.driver.property></jdbc.driver.property>
     <version.junit>4.11</version.junit>
     <jdbc.driver>jdbc-driver.jar</jdbc.driver>
     <jdbc.password.property></jdbc.password.property>
-    <version.arquillian.container>7.2.0.Final</version.arquillian.container>
     <jvm.properties.debug></jvm.properties.debug>
-    <version.arquillian_core>1.1.1.Final</version.arquillian_core>
+    <version.arquillian.container>8.0.0.Beta1</version.arquillian.container>
     <jvm.properties.jdbc></jvm.properties.jdbc>
   </properties>
   
@@ -28,7 +27,7 @@
       <dependency>
         <groupId>org.jboss.arquillian</groupId>
         <artifactId>arquillian-bom</artifactId>
-        <version>${version.arquillian_core}</version>
+        <version>${version.arquillian.core}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -71,10 +70,30 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>javax.ejb</groupId>
-      <artifactId>ejb-api</artifactId>
-      <version>3.0</version>
+      <groupId>javax.enterprise</groupId>
+      <artifactId>cdi-api</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.spec.javax.annotation</groupId>
+      <artifactId>jboss-annotations-api_1.1_spec</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    
+    <!-- Manual additions -->
+    <!-- Needed for not getting UserTransaction NoClassFound exception -->
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>javax.transaction-api</artifactId>
+      <version>1.2</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- Needed for correct run of remote EJB lookups -->
+    <dependency>
+      <groupId>org.jboss</groupId>
+      <artifactId>jboss-ejb-client</artifactId>
+      <version>2.0.0.Beta5</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   
@@ -100,7 +119,6 @@
       </plugin>
     </plugins>
   </build>
-  
   <profiles>
     <profile>
       <id>arq-jboss_as_managed_7.x</id>
@@ -129,13 +147,12 @@
       </build>
       <dependencies>
         <dependency>
-          <groupId>org.jboss.as</groupId>
-          <artifactId>jboss-as-arquillian-container-managed</artifactId>
+          <groupId>org.wildfly</groupId>
+          <artifactId>wildfly-arquillian-container-managed</artifactId>
           <version>${version.arquillian.container}</version>
         </dependency>
       </dependencies>
     </profile>
-    
     <profile>
       <id>clean.deployment.directory</id>
       <activation>
@@ -171,7 +188,6 @@
         </plugins>
       </build>
     </profile>
-    
     <profile>
       <id>copy.jdbc.driver</id>
       <activation>
@@ -207,7 +223,6 @@
         </plugins>
       </build>
     </profile>
-    
     <profile>
       <id>debug</id>
       <activation>
@@ -220,7 +235,6 @@
           -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8787</jvm.properties.debug>
       </properties>
     </profile>
-    
     <profile>
       <id>jdbc.url</id>
       <activation>
